--- a/src/main/App.css
+++ b/src/main/App.css
@@ -3,8 +3,50 @@
 
     --logo-height: 100px;
     --header-height: 100px;
+    --footer-height: 40px;
+    --aside-width: 225px;
+
+    --shadow:
+        0 2px 23px rgba(0, 0, 0, 0.1),
+        0 2px 49px rgba(0, 0, 0, 0.06)
 }
 
-.logo {
-    border: 1px solid;
+* {
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+}
+.app{
+    margin: 0px;
+    display: grid;
+    grid-template-columns: var(--aside-width) 1fr;
+    grid-template-rows: 
+    var(--header-height)
+    1fr 
+    var(--footer-height);
+    grid-template-areas: 
+    "logo header"
+    "menu content"
+    "menu footer";
+    height: 100vh;
+    background-color: #F5F5F5;
+}
+
+aside.logo {
+    grid-area: logo;
+}
+
+header.header {
+    grid-area: header;
+}
+
+aside.menu-area {
+    grid-area: menu;
+}
+
+main.content {
+    grid-area: content;
+}
+
+footer.footer {
+    grid-area: footer;
 }
